Remove overflow style that is no longer necessary

--- a/src/App.css
+++ b/src/App.css
@@ -648,7 +648,6 @@ button.mobile-keyboard-key[value="backspace"] {
 	.App > .dashboard {
 		height: 100%;
 		max-height: 100%;
-		overflow-y: scroll;
 	}
 
 	.dashboard-page.board-page {
